# ARDroneBackObs

./: README.md
ardrone_autonomy/: ParrotCopyrightAndDisclaimer.txt
sandbox/: links.txt
sandbox/ardrone_programs/: CMakeLists.txt  mainpage.dox  manifest.xml
sandbox/ardrone_programs/launch/: enviroment.launch
sandbox/ardrone_programs/src/: dback.cpp  dbackD1.cpp  landD1.cpp  takeoffD1.cpp
sandbox/beginner_tutorials/: manifest.xml
sandbox/beginner_tutorials/msg_gen/cpp/include/beginner_tutorials/: Num.h
sandbox/beginner_tutorials/srv_gen/cpp/include/beginner_tutorials/: AddTwoInts.h
sandbox/serial_port/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
sandbox/serial_port/msg_gen/cpp/include/serial_port/: Optidata.h
sandbox/serial_port/msg_gen/lisp/: Optidata.lisp  _package.lisp  _package_Optidata.lisp  serial_port-msg.asd
sandbox/serial_port/src/: client.cpp  listener.cpp  net.cpp  net2.cpp  net2drones.cpp  net3drones.cpp  serial.cpp  serial2.cpp
sandbox/serial_port/src/serial_port/msg/: _Optidata.py  __init__.py
